[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.92"
#web-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Document", "Window", "Node", "KeyboardEvent", "console", "Storage"] }
js-sys = "0.3.69"
console = "0.15.8"


[lib]
crate-type = ["cdylib", "rlib"]